--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "devDependencies": {
-    "@tailwindcss/cli": "^4.1.17",
-    "shadow-cljs": "^3.2.1",
-    "tailwindcss": "^4.1.17"
+    "shadow-cljs": "^3.3.4"
   }
 }
